; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_syntax.c_syn_match_msg.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_syntax.c_syn_match_msg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i64 }

@curwin = common dso_local global %struct.TYPE_4__* null, align 8
@.str = private unnamed_addr constant [9 x i8] c"; match \00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c" line breaks\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @syn_match_msg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @syn_match_msg() #0 {
  %1 = load %struct.TYPE_4__*, %struct.TYPE_4__** @curwin, align 8
  %2 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 0
  %3 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %4 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp sgt i64 %5, 0
  br i1 %6, label %7, label %18

7:                                                ; preds = %0
  %8 = call i32 @_(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %9 = call i32 @MSG_PUTS(i32 %8)
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** @curwin, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = call i32 @msg_outnum(i64 %14)
  %16 = call i32 @_(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0))
  %17 = call i32 @MSG_PUTS(i32 %16)
  br label %18

18:                                               ; preds = %7, %0
  ret void
}

declare dso_local i32 @MSG_PUTS(i32) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @msg_outnum(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
